New Api endpoint and first call

--- a/dummy-frontend/src/app/app.component.html
+++ b/dummy-frontend/src/app/app.component.html
@@ -10,4 +10,10 @@
       Click me and see the magic
     </button>
   </div>
+  <br>
+  <div>
+    <button type="button" class="btn btn-primary" (click)="doLogin()">
+      Login
+    </button>
+  </div>
 </div>
